<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoHigh</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_connect">Connect</string>
    <string name="btn_connect_on">Koppla från</string>
    <string name="btn_connect_off">Anslut</string>
    <string name="btn_set">Nästa</string>
    <string name="btn_up">Öka</string>
    <string name="btn_down">Minska</string>
    <string name="btn_op_settings">Inställningar</string>
    <string name="btn_log_on">Stop</string>
    <string name="btn_log_off">Logga</string>
    <string name="btn_settings_act">Parametrar</string>
    <string name="btn_sync_on">Stop</string>
    <string name="btn_sync_off">Synca</string>
    <string name="btservice_started">BT-service startad</string>
    <string name="btservice_stopped">BT-service stoppad</string>
    <string name="btservice_label">Uppkoppling vinsch via blåtand.</string>
    <string name="btservice_connected">BT-service ansluten</string>
    <string name="btservice_disconnected">BT-service frånkopplad</string>
    <string name="title_activity_service_note">ServiceNote</string>
    <string name="meter_scale">Meter scale</string>
    <string name="bt_not_supported">Bluetooth not supported</string>
    <string name="bt_disabled">Bluetooth disabled</string>
    <!-- <string name="bt_connected">Blåtand ansluten.</string> -->
    <!-- <string name="bt_disconnected">Blåtand frånkopplad.</string> -->
    <string name="parameter_act">Inställningar för vinsch</string>
    <string name="img_oil_temp">Olje temperatur</string>
    <string name="img_drum_speed">Trumhastighet</string>
    <string name="img_pump_speed">Pumphastighet</string>
    <string name="msg_connect_to_winch">Anslut till vinschen</string>
    <string name="txt_param_lbl">Värde</string>
    <string name="title_activity_list_paiered_bt_devices">Paired bluetooth devices</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_select_btdevice">Välj blåtandsenhet</string>

</resources>